--- a/app/src/main/res/layout/viewholder_search_list_row.xml
+++ b/app/src/main/res/layout/viewholder_search_list_row.xml
@@ -19,11 +19,11 @@
         android:id="@+id/price_item_root"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:cardCornerRadius="16dp">
+        android:layout_marginStart="@dimen/margin_8dp"
+        android:layout_marginTop="@dimen/margin_8dp"
+        android:layout_marginEnd="@dimen/margin_8dp"
+        android:layout_marginBottom="@dimen/margin_8dp"
+        app:cardCornerRadius="@dimen/margin_16dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -31,7 +31,7 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/art_work_url_image_view"
-                android:layout_width="100dp"
+                android:layout_width="@dimen/width_100dp"
                 android:layout_height="0dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -43,10 +43,10 @@
                 android:id="@+id/collection_name_text_view"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="5dp"
-                android:textSize="15sp"
+                android:layout_marginStart="@dimen/margin_5dp"
+                android:layout_marginTop="@dimen/margin_5dp"
+                android:layout_marginEnd="@dimen/margin_5dp"
+                android:textSize="@dimen/text_size_15sp"
                 android:textStyle="bold"
                 android:text="@{item.collectionName}"
                 app:layout_constraintEnd_toStartOf="@+id/detail_image_view"
@@ -58,21 +58,21 @@
                 android:id="@+id/appCompatTextView2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
-                android:textSize="15sp"
+                android:layout_marginStart="@dimen/margin_5dp"
+                android:layout_marginTop="@dimen/margin_5dp"
+                android:textSize="@dimen/text_size_15sp"
                 app:layout_constraintStart_toEndOf="@+id/art_work_url_image_view"
                 app:layout_constraintTop_toBottomOf="@+id/collection_name_text_view"
-                android:text="Date : " />
+                android:text="@string/date " />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/release_date_text_view"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="2dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="4dp"
-                android:textSize="15sp"
+                android:layout_marginStart="@dimen/margin_2dp"
+                android:layout_marginTop="@dimen/margin_5dp"
+                android:layout_marginEnd="@dimen/margin_5dp"
+                android:textSize="@dimen/text_size_15sp"
                 app:layout_constraintEnd_toStartOf="@+id/detail_image_view"
                 app:layout_constraintStart_toEndOf="@+id/appCompatTextView2"
                 app:layout_constraintTop_toBottomOf="@+id/collection_name_text_view"
@@ -82,21 +82,21 @@
                 android:id="@+id/appCompatTextView18"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="2dp"
-                android:textSize="15sp"
+                android:layout_marginStart="@dimen/margin_5dp"
+                android:layout_marginTop="@dimen/margin_10dp"
+                android:layout_marginBottom="@dimen/margin_2dp"
+                android:textSize="@dimen/text_size_15sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/art_work_url_image_view"
                 app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2"
-                android:text="Price : " />
+                android:text="@string/price" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/collection_price_text_view"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="2dp"
-                android:textSize="15sp"
+                android:layout_marginStart="@dimen/margin_2dp"
+                android:textSize="@dimen/text_size_15sp"
                 android:text="@{String.format(@string/price_dollar, item.collectionPrice)}"
                 app:layout_constraintStart_toEndOf="@+id/appCompatTextView18"
                 app:layout_constraintTop_toTopOf="@+id/appCompatTextView18"
@@ -107,7 +107,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="@dimen/margin_10dp"
+                android:onClick="@{()->viewModel.openListDetailClick(item.artworkUrl100,item.artistName,item.collectionName,item.longDescription)}"
                 android:src="@drawable/ic_arrow_right"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
