--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="app_bar_height">180dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
-    <dimen name="text_margin">16dp</dimen>
-    <dimen name="headerTextSize">28sp</dimen>
+
+
+    <!--FontSize-->
+    <dimen name="text_size_9sp">9sp</dimen>
+    <dimen name="text_size_12sp">12sp</dimen>
+    <dimen name="text_size_15sp">15sp</dimen>
+    <dimen name="text_size_30sp">30sp</dimen>
+    <dimen name="text_size_50sp">50sp</dimen>
+
+    <!--FontSize-->
+
+    <!--Margin-->
+    <dimen name="margin_2dp">2dp</dimen>
+    <dimen name="margin_4dp">4dp</dimen>
+    <dimen name="margin_5dp">5dp</dimen>
+    <dimen name="margin_10dp">10dp</dimen>
+    <dimen name="margin_12dp">12dp</dimen>
+    <dimen name="margin_8dp">8dp</dimen>
+    <dimen name="margin_16dp">16dp</dimen>
+    <!--Margin-->
+
+
+    <!--Width-->
+    <dimen name="width_150dp">150dp</dimen>
+    <dimen name="width_100dp">100dp</dimen>
+    <!--Width-->
+
+
+
+
+    <!--Height-->
+    <dimen name="height_150dp">150dp</dimen>
+    <!--Width-->
+
 </resources>
